# LangBiTe-a4s-plugin

./: .env  .gitignore  pyproject.toml
langbite/: __init__.py  langbite_a4s_plugin.py
langbite/a4s_plugin/: custom_dataset_input_provider.py  models.py  ui_schema.py
langbite/io_managers/: reporting_io_manager.py
langbite/llm_services/: llm_factory.py  llm_gpt4all_service.py
langbite/resources/: factories.json
