[project]
name = "langbite-a4s-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a4s-plugin-interface>=0.1.0",
    "gpt4all>=2.8.2",
    "jsonschema>=4.25.1",
    "mypy>=1.11",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "replicate>=1.0.7",
    "requests>=2.32.5",
]

[tool.uv.sources]
a4s-plugin-interface = { git = "https://github.com/lux-ai-factory/a4s-plugin-interface.git" }
